and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

November 20, 2014 - J.Apostolakis (geomnav-V10-00-18, 17)
---------------------------------
- G4ErrorPropagationNavigator: fix to make normal a unit vector,
  and fix for Coverity issue, to protect against null 'target'.
  Addressing problem report #1679.
    
November 19, 2014 - G.Cosmo (geomnav-V10-00-16)
---------------------------
- Some code cleanup in G4Navigator source.

November 18, 2014 - J.Apostolakis (geomnav-V10-00-15)
---------------------------------
- G4ErrorPropagationNavigator: added GetGlobalExitNormal() method to
  correspond to update of G4Navigator interface in Geant4 9.5.
  Addresses problem report #1679.
- G4Navigator: small fix to calculation of stored step endpoint, for steps
  that do not hit a boundary.
- Fixed GNUmakefile in test.

November 14, 2014 - J.Apostolakis (geomnav-V10-00-13,14)
---------------------------------
- G4Navigator: Corrections for Exit Normal.

October 20, 2014 - G.Cosmo (geomnav-V10-00-12)
--------------------------
- Leave out changes in G4FieldPropagation.cc laying on the trunk...

October 18, 2014 - A.Dotti (geomnav-V10-00-11)
------------------------
- Code cleanup: removed unnecessary G4ThreadLocal in G4ReplicaNavigation.

August 25, 2014 - G.Cosmo  (geomnav-V10-00-10)
-------------------------
- Minor code cleanup.

August 22, 2014 - M.Asai  (geomnav-V10-00-08 and geomnav-V10-00-09)
------------------------
- G4TransportationManager: Add ClearParallelWorlds() method. This method is
  invoked by G4RunManager when user destroys all the geometry and rebuild
  from scratch.

June  24, 2014 - G.Folger  (geomnav-V10-00-07)
-------------------------